tsParser/src/parser/src/RustParser.js
// Generated from src/Rust.g4 by ANTLR 4.13.1
import * as antlr from "antlr4ng";
class RustParser extends antlr.Parser {
    get grammarFileName() { return "Rust.g4"; }
    get literalNames() { return RustParser.literalNames; }
    get symbolicNames() { return RustParser.symbolicNames; }
    get ruleNames() { return RustParser.ruleNames; }
    get serializedATN() { return RustParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new antlr.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, RustParser._ATN, RustParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    program() {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, RustParser.RULE_program);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 41;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 2)) & ~0x1F) === 0 && ((1 << (_la - 2)) & 4227978801) !== 0)) {
                    {
                        {
                            this.state = 38;
                            this.statement();
                        }
                    }
                    this.state = 43;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 44;
                this.match(RustParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    statement() {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, RustParser.RULE_statement);
        try {
            this.state = 57;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context)) {
                case 1:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 46;
                        this.letDecl();
                        this.state = 47;
                        this.match(RustParser.T__0);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 49;
                        this.fnDecl();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 50;
                        this.whileLoop();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(localContext, 4);
                    {
                        this.state = 51;
                        this.ifExpr();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localContext, 5);
                    {
                        this.state = 52;
                        this.block();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localContext, 6);
                    {
                        this.state = 53;
                        this.expr();
                        this.state = 54;
                        this.match(RustParser.T__0);
                    }
                    break;
                case 7:
                    this.enterOuterAlt(localContext, 7);
                    {
                        this.state = 56;
                        this.returnExpr();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    letDecl() {
        let localContext = new LetDeclContext(this.context, this.state);
        this.enterRule(localContext, 4, RustParser.RULE_letDecl);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 59;
                this.match(RustParser.T__1);
                this.state = 61;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 3) {
                    {
                        this.state = 60;
                        this.match(RustParser.T__2);
                    }
                }
                this.state = 63;
                this.match(RustParser.IDENTIFIER);
                this.state = 66;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 4) {
                    {
                        this.state = 64;
                        this.match(RustParser.T__3);
                        this.state = 65;
                        this.typeExpr();
                    }
                }
                this.state = 70;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 5) {
                    {
                        this.state = 68;
                        this.match(RustParser.T__4);
                        this.state = 69;
                        this.expr();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    fnDecl() {
        let localContext = new FnDeclContext(this.context, this.state);
        this.enterRule(localContext, 6, RustParser.RULE_fnDecl);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 72;
                this.match(RustParser.T__5);
                this.state = 73;
                this.match(RustParser.IDENTIFIER);
                this.state = 74;
                this.match(RustParser.T__6);
                this.state = 76;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 30) {
                    {
                        this.state = 75;
                        this.paramList();
                    }
                }
                this.state = 78;
                this.match(RustParser.T__7);
                this.state = 80;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 10) {
                    {
                        this.state = 79;
                        this.returnType();
                    }
                }
                this.state = 82;
                this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    paramList() {
        let localContext = new ParamListContext(this.context, this.state);
        this.enterRule(localContext, 8, RustParser.RULE_paramList);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 84;
                this.param();
                this.state = 89;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 9) {
                    {
                        {
                            this.state = 85;
                            this.match(RustParser.T__8);
                            this.state = 86;
                            this.param();
                        }
                    }
                    this.state = 91;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    param() {
        let localContext = new ParamContext(this.context, this.state);
        this.enterRule(localContext, 10, RustParser.RULE_param);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 92;
                this.match(RustParser.IDENTIFIER);
                this.state = 93;
                this.match(RustParser.T__3);
                this.state = 94;
                this.typeExpr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    returnType() {
        let localContext = new ReturnTypeContext(this.context, this.state);
        this.enterRule(localContext, 12, RustParser.RULE_returnType);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 96;
                this.match(RustParser.T__9);
                this.state = 97;
                this.typeExpr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    whileLoop() {
        let localContext = new WhileLoopContext(this.context, this.state);
        this.enterRule(localContext, 14, RustParser.RULE_whileLoop);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 99;
                this.match(RustParser.T__10);
                this.state = 100;
                this.expr();
                this.state = 101;
                this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    block() {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 16, RustParser.RULE_block);
        let _la;
        try {
            let alternative;
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 103;
                this.match(RustParser.T__11);
                this.state = 107;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                            {
                                this.state = 104;
                                this.statement();
                            }
                        }
                    }
                    this.state = 109;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
                }
                this.state = 111;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (((((_la - 7)) & ~0x1F) === 0 && ((1 << (_la - 7)) & 132124161) !== 0)) {
                    {
                        this.state = 110;
                        this.returnExpr();
                    }
                }
                this.state = 113;
                this.match(RustParser.T__12);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    returnExpr() {
        let localContext = new ReturnExprContext(this.context, this.state);
        this.enterRule(localContext, 18, RustParser.RULE_returnExpr);
        try {
            this.state = 119;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 10, this.context)) {
                case 1:
                    localContext = new ImplicitReturnContext(localContext);
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 115;
                        this.expr();
                    }
                    break;
                case 2:
                    localContext = new ExplicitReturnContext(localContext);
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 116;
                        this.expr();
                        this.state = 117;
                        this.match(RustParser.T__0);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    ifExpr() {
        let localContext = new IfExprContext(this.context, this.state);
        this.enterRule(localContext, 20, RustParser.RULE_ifExpr);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 121;
                this.match(RustParser.T__13);
                this.state = 122;
                this.expr();
                this.state = 123;
                this.block();
                this.state = 126;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 15) {
                    {
                        this.state = 124;
                        this.match(RustParser.T__14);
                        this.state = 125;
                        this.block();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    expr() {
        let localContext = new ExprContext(this.context, this.state);
        this.enterRule(localContext, 22, RustParser.RULE_expr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 128;
                this.exprBinary();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    exprBinary() {
        let localContext = new ExprBinaryContext(this.context, this.state);
        this.enterRule(localContext, 24, RustParser.RULE_exprBinary);
        try {
            let alternative;
            localContext = new BinaryExprContext(localContext);
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 130;
                this.exprUnary();
                this.state = 136;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                            {
                                this.state = 131;
                                this.binOp();
                                this.state = 132;
                                this.exprUnary();
                            }
                        }
                    }
                    this.state = 138;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    exprUnary() {
        let localContext = new ExprUnaryContext(this.context, this.state);
        this.enterRule(localContext, 26, RustParser.RULE_exprUnary);
        let _la;
        try {
            this.state = 149;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case RustParser.T__15:
                    localContext = new UnaryNegationContext(localContext);
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 139;
                        this.match(RustParser.T__15);
                        this.state = 140;
                        this.exprUnary();
                    }
                    break;
                case RustParser.T__16:
                    localContext = new UnaryNotContext(localContext);
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 141;
                        this.match(RustParser.T__16);
                        this.state = 142;
                        this.exprUnary();
                    }
                    break;
                case RustParser.T__17:
                    localContext = new BorrowExprContext(localContext);
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 143;
                        this.match(RustParser.T__17);
                        this.state = 145;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        if (_la === 3) {
                            {
                                this.state = 144;
                                this.match(RustParser.T__2);
                            }
                        }
                        this.state = 147;
                        this.exprUnary();
                    }
                    break;
                case RustParser.T__6:
                case RustParser.T__27:
                case RustParser.T__28:
                case RustParser.IDENTIFIER:
                case RustParser.INT:
                case RustParser.FLOAT:
                case RustParser.STRING:
                    localContext = new UnaryToAtomContext(localContext);
                    this.enterOuterAlt(localContext, 4);
                    {
                        this.state = 148;
                        this.exprAtom();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    exprAtom() {
        let localContext = new ExprAtomContext(this.context, this.state);
        this.enterRule(localContext, 28, RustParser.RULE_exprAtom);
        let _la;
        try {
            this.state = 170;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 17, this.context)) {
                case 1:
                    localContext = new FunctionCallContext(localContext);
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 151;
                        this.match(RustParser.IDENTIFIER);
                        this.state = 152;
                        this.match(RustParser.T__6);
                        this.state = 154;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        if (((((_la - 7)) & ~0x1F) === 0 && ((1 << (_la - 7)) & 132124161) !== 0)) {
                            {
                                this.state = 153;
                                this.argList();
                            }
                        }
                        this.state = 156;
                        this.match(RustParser.T__7);
                    }
                    break;
                case 2:
                    localContext = new MacroCallContext(localContext);
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 157;
                        this.match(RustParser.IDENTIFIER);
                        this.state = 158;
                        this.match(RustParser.T__16);
                        this.state = 159;
                        this.match(RustParser.T__6);
                        this.state = 161;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        if (((((_la - 7)) & ~0x1F) === 0 && ((1 << (_la - 7)) & 132124161) !== 0)) {
                            {
                                this.state = 160;
                                this.argList();
                            }
                        }
                        this.state = 163;
                        this.match(RustParser.T__7);
                    }
                    break;
                case 3:
                    localContext = new ParensExprContext(localContext);
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 164;
                        this.match(RustParser.T__6);
                        this.state = 165;
                        this.expr();
                        this.state = 166;
                        this.match(RustParser.T__7);
                    }
                    break;
                case 4:
                    localContext = new LiteralExprContext(localContext);
                    this.enterOuterAlt(localContext, 4);
                    {
                        this.state = 168;
                        this.literal();
                    }
                    break;
                case 5:
                    localContext = new IdentExprContext(localContext);
                    this.enterOuterAlt(localContext, 5);
                    {
                        this.state = 169;
                        this.match(RustParser.IDENTIFIER);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    argList() {
        let localContext = new ArgListContext(this.context, this.state);
        this.enterRule(localContext, 30, RustParser.RULE_argList);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 172;
                this.expr();
                this.state = 177;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 9) {
                    {
                        {
                            this.state = 173;
                            this.match(RustParser.T__8);
                            this.state = 174;
                            this.expr();
                        }
                    }
                    this.state = 179;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    binOp() {
        let localContext = new BinOpContext(this.context, this.state);
        this.enterRule(localContext, 32, RustParser.RULE_binOp);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 180;
                _la = this.tokenStream.LA(1);
                if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & 267976704) !== 0))) {
                    this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    typeExpr() {
        let localContext = new TypeExprContext(this.context, this.state);
        this.enterRule(localContext, 34, RustParser.RULE_typeExpr);
        let _la;
        try {
            this.state = 188;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case RustParser.T__17:
                    localContext = new RefTypeContext(localContext);
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 182;
                        this.match(RustParser.T__17);
                        this.state = 184;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        if (_la === 3) {
                            {
                                this.state = 183;
                                this.match(RustParser.T__2);
                            }
                        }
                        this.state = 186;
                        this.match(RustParser.IDENTIFIER);
                    }
                    break;
                case RustParser.IDENTIFIER:
                    localContext = new BasicTypeContext(localContext);
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 187;
                        this.match(RustParser.IDENTIFIER);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    literal() {
        let localContext = new LiteralContext(this.context, this.state);
        this.enterRule(localContext, 36, RustParser.RULE_literal);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 190;
                _la = this.tokenStream.LA(1);
                if (!(((((_la - 28)) & ~0x1F) === 0 && ((1 << (_la - 28)) & 59) !== 0))) {
                    this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    static get _ATN() {
        if (!RustParser.__ATN) {
            RustParser.__ATN = new antlr.ATNDeserializer().deserialize(RustParser._serializedATN);
        }
        return RustParser.__ATN;
    }
    get vocabulary() {
        return RustParser.vocabulary;
    }
}
RustParser.T__0 = 1;
RustParser.T__1 = 2;
RustParser.T__2 = 3;
RustParser.T__3 = 4;
RustParser.T__4 = 5;
RustParser.T__5 = 6;
RustParser.T__6 = 7;
RustParser.T__7 = 8;
RustParser.T__8 = 9;
RustParser.T__9 = 10;
RustParser.T__10 = 11;
RustParser.T__11 = 12;
RustParser.T__12 = 13;
RustParser.T__13 = 14;
RustParser.T__14 = 15;
RustParser.T__15 = 16;
RustParser.T__16 = 17;
RustParser.T__17 = 18;
RustParser.T__18 = 19;
RustParser.T__19 = 20;
RustParser.T__20 = 21;
RustParser.T__21 = 22;
RustParser.T__22 = 23;
RustParser.T__23 = 24;
RustParser.T__24 = 25;
RustParser.T__25 = 26;
RustParser.T__26 = 27;
RustParser.T__27 = 28;
RustParser.T__28 = 29;
RustParser.IDENTIFIER = 30;
RustParser.INT = 31;
RustParser.FLOAT = 32;
RustParser.STRING = 33;
RustParser.WS = 34;
RustParser.COMMENT = 35;
RustParser.RULE_program = 0;
RustParser.RULE_statement = 1;
RustParser.RULE_letDecl = 2;
RustParser.RULE_fnDecl = 3;
RustParser.RULE_paramList = 4;
RustParser.RULE_param = 5;
RustParser.RULE_returnType = 6;
RustParser.RULE_whileLoop = 7;
RustParser.RULE_block = 8;
RustParser.RULE_returnExpr = 9;
RustParser.RULE_ifExpr = 10;
RustParser.RULE_expr = 11;
RustParser.RULE_exprBinary = 12;
RustParser.RULE_exprUnary = 13;
RustParser.RULE_exprAtom = 14;
RustParser.RULE_argList = 15;
RustParser.RULE_binOp = 16;
RustParser.RULE_typeExpr = 17;
RustParser.RULE_literal = 18;
RustParser.literalNames = [
    null, "';'", "'let'", "'mut'", "':'", "'='", "'fn'", "'('", "')'",
    "','", "'->'", "'while'", "'{'", "'}'", "'if'", "'else'", "'-'",
    "'!'", "'&'", "'+'", "'*'", "'/'", "'=='", "'!='", "'<'", "'<='",
    "'>'", "'>='", "'true'", "'false'"
];
RustParser.symbolicNames = [
    null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, null, null, null,
    null, null, null, null, null, null, null, null, "IDENTIFIER", "INT",
    "FLOAT", "STRING", "WS", "COMMENT"
];
RustParser.ruleNames = [
    "program", "statement", "letDecl", "fnDecl", "paramList", "param",
    "returnType", "whileLoop", "block", "returnExpr", "ifExpr", "expr",
    "exprBinary", "exprUnary", "exprAtom", "argList", "binOp", "typeExpr",
    "literal",
];
RustParser._serializedATN = [
    4, 1, 35, 193, 2, 0, 7, 0, 2, 1, 7, 1, 2, 2, 7, 2, 2, 3, 7, 3, 2, 4, 7, 4, 2, 5, 7, 5, 2, 6, 7,
    6, 2, 7, 7, 7, 2, 8, 7, 8, 2, 9, 7, 9, 2, 10, 7, 10, 2, 11, 7, 11, 2, 12, 7, 12, 2, 13, 7, 13,
    2, 14, 7, 14, 2, 15, 7, 15, 2, 16, 7, 16, 2, 17, 7, 17, 2, 18, 7, 18, 1, 0, 5, 0, 40, 8, 0,
    10, 0, 12, 0, 43, 9, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
    1, 1, 3, 1, 58, 8, 1, 1, 2, 1, 2, 3, 2, 62, 8, 2, 1, 2, 1, 2, 1, 2, 3, 2, 67, 8, 2, 1, 2, 1, 2,
    3, 2, 71, 8, 2, 1, 3, 1, 3, 1, 3, 1, 3, 3, 3, 77, 8, 3, 1, 3, 1, 3, 3, 3, 81, 8, 3, 1, 3, 1, 3,
